--- a/ejercicios/TP1/index.html
+++ b/ejercicios/TP1/index.html
@@ -120,39 +120,7 @@
             <h1 class="display-4 fw-bold text-body-emphasis mb-5">Trabajo Práctico 2</h1>
         </div>
     </main>
-    <script>
-        for (let i=1; i<=12; i++) {
-            // JQuery -> cargo el código en cada elemento por ID
-            $("#codeTP1-"+i).load("Ejercicio_" + i + ".js");
-
-            document.getElementById("tp1-ejercicio-" + i).querySelector('.card-title').append(i);
-
-            // instalo un "listener" para cada botón
-            let button = document.getElementById("playTP1-" + i);
-            button.onclick = function () {
-                if (!console)
-                    console = {};
-                
-                // inserta el script en el head
-                let script = document.createElement("script");
-                script.type = "text/javascript";
-                script.src = "Ejercicio_" + i + ".js";
-                let head = document.getElementsByTagName("head")[0];
-                if (head.querySelector("[src='" + script.getAttribute('src') + "']") == null)
-                    head.appendChild(script);
-
-                // redefine la salida por consola
-                let logger = document.getElementById("outputTP1-" + i);
-                console.log = function (message) {
-                    if (typeof message == 'object')
-                        logger.innerHTML += (JSON && JSON.stringify ? JSON.stringify(message) : String(message)) + '<br>';
-                    else
-                        logger.innerHTML += message + '<br>';
-                };
-                return false;
-            };
-        };
-    </script>
+    <script src="assets/js/functions.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
